<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <!-- Header RelativeLayout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#FFFFFF">

        <ImageView
            android:layout_width="344dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="11dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/myntra1" />

    </RelativeLayout>

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:textSize="19sp"
        android:textColor="@android:color/white"
        android:text="@string/welcome_user" />

    <!-- Subscription Plan Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:textColor="@android:color/white"
        android:text="@string/myntra_subscription_clothing_plan"
        android:textSize="20sp" />

    <!-- Description Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textSize="19sp"
        android:textColor="@android:color/white"
        android:text="@string/discover_a_new_wardrobe_every_month" />

    <!-- Main Content Layout -->
    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="660dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:background="@drawable/relative_bg">

        <!-- First Subscription Option -->
        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/hover_effect"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:textSize="19sp"
                android:textColor="@android:color/white"
                android:text="@string/basic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/one" />

        </RelativeLayout>

        <!-- Second Subscription Option -->
        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:background="@drawable/hover_effect"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:textSize="19sp"
                android:textColor="@android:color/white"
                android:text="@string/standard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/three" />
        </RelativeLayout>

        <!-- Third Subscription Option -->
        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="340dp"
            android:background="@drawable/hover_effect"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:textSize="19sp"
                android:textColor="@android:color/white"
                android:text="@string/prem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/six" />
        </RelativeLayout>

        <!-- Fourth Subscription Option -->
        <RelativeLayout
            android:id="@+id/relativeLayout6"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="500dp"
            android:background="@drawable/hover_effect"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:textSize="19sp"
                android:textColor="@android:color/white"
                android:text="@string/elite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/twelve"
                tools:ignore="VisualLintBounds" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
