<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".EliteActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/golden"
        android:padding="16dp">

        <ImageView
            android:id="@+id/left_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            android:src="@drawable/arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="19dp"
            android:textSize="20sp"
            android:textColor="@color/black_second"
            android:textStyle="bold"
            android:text="@string/elite_plan" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:background="@drawable/cloth_bg"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/elite_cloth"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="310dp"
            android:layout_marginTop="100dp"
            android:text="@string/elite_currency"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="398dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/optional"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="334dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="-3dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/optional"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <!-- Changed to RelativeLayout and added layout_below attribute -->
        <RelativeLayout
            android:id="@+id/expandableView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:layout_marginTop="8dp"
            android:visibility="gone"> <!-- Added layout_below attribute -->

            <!-- Content of expandable section -->
            <TextView
                android:id="@+id/expandableTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="8dp"
                android:text="@string/elite_beauty"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/golden"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="380dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/shipping"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="403dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="10dp"
            android:text="@string/four_x"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="445dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/shipping"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="473dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="10dp"
            android:text="@string/shipping"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="800dp"
        android:background="@drawable/shipping"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="799dp">


        <TextView
            android:id="@+id/labelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/ttl_amt"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="315dp"
            android:layout_marginTop="10dp"
            android:text="@string/elite_currency"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <Button
            android:id="@+id/add_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/golden"
            android:text="@string/select"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>

